--- a/images/Module14/DFTConvolutionProof.html
+++ b/images/Module14/DFTConvolutionProof.html
@@ -13140,7 +13140,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now use the fact that $x$ is periodic, and so shifting it by a certain amount only changes its phase. (Refer to <a href = "https://ursinus-cs472a-s2021.github.io/Modules/Module11/Video1">Module 11</a>)</p>
+<p>Now use the fact that $x$ is periodic, and so shifting it by a certain amount only changes its phase. (Refer to <a href = "../../Module11/Video1">Module 11</a>)</p>
 <p>Recall the formula $\cos(2\pi f (t - j)) = \cos(2 \pi f t - 2 \pi f j)$</p>
 
 </div>
